deploy/install/kubedialer.yaml
---
# Source: kube-dialer/templates/dialer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubedialer-kubedialer
  labels:
    app: kubedialer-kube-dialer
    chart: "kube-dialer-1.0.0"
    release: "kubedialer"
    heritage: "Helm"
  annotations:
    kruz.io/component.role: dialer
    kruz.io/component.tier: edge
    kruz.io/info.vendor: Kruz IO Inc.
spec:
  type: ClusterIP
  selector:
    app: kube-dialer
  ports:
  - name: https
    protocol: TCP
    port: 8080
    targetPort: 8080
---
# Source: kube-dialer/templates/dialer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubedialer-kubedialer
  labels:
    app: kube-dialer
    heritage: "Helm"
    release: "kubedialer"
    chart: "kube-dialer-1.0.0"
  annotations:
    kruz.io/component.role: kube-dialer
    kruz.io/component.tier: edge-kube-dialer
    kruz.io/info.vendor: Kruz IO Inc.
spec:
  selector:
    matchLabels:
      app: kube-dialer
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kube-dialer
        heritage: "Helm"
        release: "kubedialer"
    spec:
      volumes:
      # The static assets
      - name: static
        emptyDir: {}      
      # Map all keys to files.
      - name: dialer-config
        configMap:
          name: dialer-config
      - name: dialer-tiles
        configMap:
          name: dialer-tiles       

      # Pod Security
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 1000
      containers:
      - name: dialer
        image: kruzio/kube-dialer:1.0.0-966cf0a
        imagePullPolicy: Always   
        #Container Security            
        securityContext:     
            allowPrivilegeEscalation: false
            capabilities:
                add:
                - NET_BIND_SERVICE
                drop:
                - ALL
        command: [ "hugo" ]
        args: [ "server", "--bind", "0.0.0.0", "-p", "8080","-s", "/static", "--log", "--verboseLog"]
        volumeMounts:
        - name: static
          mountPath: /static
        - name: dialer-tiles
          mountPath: /static/content/tiles          
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
---
# Source: kube-dialer/templates/dialer-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dialer
  annotations:
    kruz.io/component.role: dialer-ingress
    kruz.io/component.tier: edge
    kruz.io/info.vendor: Kruz IO Inc.
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"    
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"    

spec:
  rules:
  - host: kubedialer.kruz.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kubedialer-kubedialer
          servicePort: 8080
  tls:
  - hosts:
    - kubedialer.kruz.io
    secretName: kubedialer-kubedialer-certs
---
# Source: kube-dialer/templates/oauth2-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  annotations:
    kruz.io/component.role: identity
    kruz.io/component.tier: edge
    kruz.io/info.vendor: Kruz IO Inc.
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  rules:
  - host: kubedialer.kruz.io
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: http
  tls:
  - hosts:
    - kubedialer.kruz.io
    secretName: kubedialer-kubedialer-certs
---
# Source: kube-dialer/templates/requirements.yaml
dependencies:
  - name: oauth2-proxy
    version: "> 3.2.0"
    repository: "@stable"
    condition: oauth2.enabled
